--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,7 +1,10 @@
 server {
-	
-	listen 80 default;
-	#server_name example.com;
-	root /home/vagrant/test_deploy/currrent;
 
+        listen 80 default;
+        #server_name example.com;
+        root /home/vagrant/test_deploy/currrent;
+        try_files $uri/index.html $uri @unicorn;
+        location @unicorn{
+          proxy_pass http://localhost:8080;
+        }
 }
